--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: '3'
 
 services:
   php:
-    image: book-flow-php-image
+    build:
+      context: .
+      dockerfile: Dockerfile
+
     container_name: book-flow-php
     ports:
       - "8080:80"
