Added Hero container

--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,12 @@ fabric.properties
 !.idea/codeStyles
 !.idea/runConfigurations
 
+### Sass ###
+.sass-cache/
+*.css.map
+*.sass.map
+*.scss.map
+
 # End of https://www.toptal.com/developers/gitignore/api/phpstorm+all
 
 
