--- a/.gitignore
+++ b/.gitignore
@@ -100,6 +100,7 @@ fabric.properties
 *.css.map
 *.sass.map
 *.scss.map
+*.css
 
 # End of https://www.toptal.com/developers/gitignore/api/phpstorm+all
 
